<resources>
    <string name="app_name">IntegrationProject</string>

    <!-- Main -->
    <string name="entre_conta">Entre na sua conta</string>
    <string name="criar_conta">Criar uma conta</string>

    <!-- Entar -->
    <string name="bank_app">BankApp</string>
    <string name="agencia_digito">Agência</string>
    <string name="agencia_digito_exemplo">0000-0</string>
    <string name="conta_digito">Conta com dígito</string>
    <string name="conta_digito_exemplo">00000000-0</string>
    <string name="senha_entrar">Senha(6 Dígitos)</string>
    <string name="senha_entrar_exemplo">******</string>
    <string name="entrar">Entrar</string>

    <string name="cadastre_se">Cadastre-se.</string>
    <string name="nao_tem_cadastro">Não tem cadastro?</string>
    <string name="nome_banco">OinkBank</string>
    <string name="mais_novo_banco">mais novo banco !</string>
    <string name="seu">, seu</string>
    <string name="seja_bem_vindo_ao">Seja bem vindo ao</string>

    <!-- Cadastrar -->
    <string name="boas_vindas">Boas-vindas, para realizar seu cadastro precisamos de alguns dados</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="email">Email</string>
    <string name="renda_mensal">Renda mensal</string>
    <string name="patrimonio_liquido">Patrimônio líquido</string>
    <string name="senha">Senha</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="campo_obrigatorio">Campo obrigatório</string>
    <string name="seis_digitos">A senha deve ter seis dígitos</string>
    <string name="senhas_iguais">As senhas devem ser iguais</string>

    <!-- Home -->
    <string name="ola">Olá,</string>
    <string name="saldo">R$</string>
    <string name="agencia_home">Agência:</string>
    <string name="conta_home">Conta:</string>
    <string name="pix">Pix</string>
    <string name="pagar">Pagar</string>
    <string name="transferir">Transferir</string>
    <string name="meus_cartoes">Meus Cartões</string>
    <string name="emprestimo">Empréstimo</string>
    <string name="recarga_celular">Recarga de celular</string>
    <string name="fourshopping">Shopping</string>
    <string name="nossas_ofertas">Nossas ofertas</string>
    <string name="seguro">Seguro</string>
    <string name="frase_seguro">Não deixe o seu dinheiro para os outros, cuide de você !</string>
    <string name="seguro_de_vida">Seguro de vida</string>
    <string name="editar_dados">Editar Dados</string>
    <string name="sair">sair</string>

    <!-- Home-Editar -->
    <string name="editar">Editar dados</string>
    <string name="editar_btn">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="confirmar_edicao">Confirmar edição</string>


    <string name="minhas_chaves">Minhas Chaves</string>
    <string name="visualize">Visualize, adicione ou exclua chaves Pix:</string>
    <string name="telefone">Telefone</string>
    <string name="chave_aleatoria">Chave Aleatória</string>
    <string name="cadastrar_nova_chave">Cadastrar nova chave</string>
    <string name="sem_cadastro">S/Cadastro</string>
    <string name="titulo_pesquisa">Pesquisar por pessoa</string>
    <string name="hint_pesquisa">Nome, CPF, telefone</string>
    <string name="titulo_selecionar_chave">Selecionar Chave</string>


    <!-- Cadastrar Chave Pix -->
    <string name="texto_conta_corrente">Conta\nCorrente</string>
    <string name="texto_conta_pupanca">Conta\nPoupança</string>
    <string name="tipo_de_conta">Tipo de Conta</string>
    <string name="selecionar_tipo_chave">Selecionar o tipo de chave desejada:</string>
    <string name="sua_chave">Sua chave:</string>
    <string name="tipo_chave">Tipo de Chave:</string>
    <string name="chave">Chave:</string>
    <string name="cadastrar_chave">Cadastrar Chave</string>
    <string name="selecione_tipo_chave">Selecione o tipo de Chave para poder cria-la.</string>
    <string-array name="tipos_de_chaves">
        <item>Selecionar chave</item>
        <item>Email</item>
        <item>CPF</item>
        <item>Celular</item>
        <item>Aleatório</item>
    </string-array>

    <!-- Area Pix -->
    <string name="area_pix_titulo">Área Pix</string>
    <string name="area_pix_descricao">Abaixo, selecione uma funcionalidade:</string>
    <string name="qr_code">QR Code</string>
    <string name="pix_celular">Celular</string>
    <string name="pix_email">E-mail</string>
    <string name="pix_cpf">CPF/CNPJ</string>
    <string name="pix_chaveAleatoria">Chave aleatória</string>
    <string name="pix_copiaecola">Pix copia e cola</string>
    <string name="pix_transferir">Transferir</string>
    <string name="pix_receber">Receber</string>
    <string name="pix_btn_minhaChave">Minhas chaves PIX</string>

    <!-- Pix Copia e Cola -->
    <string name="pix_copiaecola_btn">Continuar</string>
    <string name="pix_copiaecola_Titulo">Insira o Pix Copia e Cola</string>

    <!-- Confirmar Pix -->
    <string name="confirmacao">Confirmação</string>
    <string name="texto_confirmacao_pix">Verifique os dados para efeturar a transferência.</string>
    <string name="chave_pix">Chave Pix</string>
    <string name="confirmar_pix">Confirmar Pix</string>
    <string name="mensagem_confirmar">Mensgem:</string>
    <string name="nome_confirmar">Nome:</string>
    <string name="data_transferencia">Data de transferência:</string>
    <string name="valor_transferencia">Valor:</string>


    <!-- Cobrar 1 -->
    <string name="titulo_cobrar">Cobrar</string>
    <string name="subtexto_cobrar">Qual valor você quer receber?</string>
    <string name="nao_especificar">Não especificar valor</string>
    <string name="confirmar">Confirmar</string>
    <string name="hint_valor">R$ 0,00</string>
    <string name="texto_erro_cobrar">Preencha o valor</string>

    <!-- Cobrar 2 -->
    <string name="valor">Valor</string>
    <string name="titulo_cod_cobrar">Cobrar</string>
    <string name="subtexto_cod_cobrar">Esse é seu pix copia e cola</string>
    <string name="link_cobranca">bankapp.com//pagar/1ghDfD2Xx2/Tnf2552XdsS</string>

    <!-- Editar -->
    <string name="cpf_invalido">CPF inválido</string>
    <string name="data_invalida_1">Data inválida</string>
    <string name="data_invalida_2">Menor de 18 anos</string>
    <string name="email_invalido">E-mail inválido</string>
    <string name="nome_invalido">Nome inválido</string>

    <!-- Transferencia Inserir Valor-->
    <string name="transferencia_titulo">Transferência</string>
    <string name="transferencia_inserir_subtitulo">Digite o valor que deseja transferir.</string>
    <string name="mensagem_texto">Mensagem (Opcional):</string>


    <!-- Transferencia Recebida-->
    <string name="voltar_btn">Voltar</string>
    <string name="voce_recebeu_transferencia">Você recebeu uma transferência e já está disponível em sua conta</string>
    <string name="transferencia_recebida">Transferência recebida!</string>
    <string name="termos_e_condicoes">Ao criar uma conta você aceita nossos <b>termos e condições</b>.</string>


    <!-- Erro inesperado -->
    <string name="erro_inesperado_titulo">Oooopss...</string>
    <string name="erro_inesperado_subtitulo">Parece que ocorreu um erro inesperado em nosso sistema</string>


    <!-- Tela erro 404 -->
    <string name="tente_novamente">Tente novamente</string>
    <string name="titulo_erro_404">Esses não são os porcos que você estava procurando.</string>
    <string name="subtitulo_erro_404">Caso precise, entre em contato com o suporte.</string>
    <string name="porco_sendo_abduzido">Porco sendo abduzido</string>
    <string name="ja_possui_uma_conta_entre_aqui">Já possui uma conta? <b>Entre aqui</b></string>

    <!-- Erro de Transação -->
    <string name="erro_transacao">Erro na transação!</string>
    <string name="erro_transacao_texto">No momento, não foi possível\nefetuar a transação. Tente\nnovamente mais tarde ou entre\nem contato conosco.</string>
    <!-- Cadastro Concluido -->
    <string name="bem_vindo">Seja bem-vindo\nao OinkBank, cadastro\nrealizado com sucesso!</string>
    <string name="dados_acesso">Seus dados de acesso:</string>
    <string name="conta">Conta:</string>
    <string name="agencia">Agência:</string>


    <!-- Transação concluída -->
    <string name="transacao_concluida">Transação concluida!</string>
    <string name="transacao_sub">Sua transação foi efetuada com sucesso.</string>
    <string name="continuar">Continuar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Definir Limite Pix -->
    <string name="definir_limite">Definir Limite</string>
    <string name="defina_limite_subtitulo">Defina um limite de gatos para os períodos diurno e noturno</string>
    <string name="limite_diurno">Limite do período diurno:</string>
    <string name="limite_noturno">Limite do período noturno:</string>
    <string name="pix_copia_cola">Pix Copia Cola</string>
    <string name="subtitulo_pix_copia_cola">Digite o código do Pix Copia Cola para efetuar o pagamento.</string>
    <string name="codigo_pix_copia_cola">Código Pix Copia Cola</string>
    <string name="voltar_pix_copia_cola">Voltar</string>
    <string name="chave_adapter_pix_transferencia">chave</string>
    <string name="nome_adapter_pix_transferencia">nome</string>

    <!-- Pix Copia Cola -->


</resources>