<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.fragment.ErroInesperadoFragment">

    <TextView
        android:id="@+id/erro_titulo_txt"
        style="@style/titulo_pagina"
        android:text="@string/erro_inesperado_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/erro_subtitulo_txt"
        style="@style/subtitulo_pagina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/erro_inesperado_subtitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/erro_titulo_txt" />

    <ImageView
        android:id="@+id/erro_imagem_ic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_erro_inesperado"
        app:layout_constraintBottom_toTopOf="@+id/sair_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/erro_subtitulo_txt"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sair_btn"
        style="@style/botao"
        android:layout_width="match_parent"
        android:text="@string/tente_novamente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>