<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.CobrarActivity">

  <ImageView
      android:id="@+id/voltar_img"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginTop="20dp"
      android:src="@drawable/ic_seta"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/cobrar_titulo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginTop="20dp"
      android:fontFamily="@font/nunito_extrabold"
      android:text="@string/titulo_cobrar"
      android:textColor="@color/black"
      android:textSize="28sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/voltar_img" />

  <TextView
      android:id="@+id/cobrar_descricao"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginTop="16dp"
      android:fontFamily="@font/nunito_semibold"
      android:text="@string/subtexto_cobrar"
      android:textColor="@color/black"
      android:textSize="17sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/cobrar_titulo" />

  <EditText
      android:id="@+id/renda_edt"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:hint="R$ 0,00"
      android:fontFamily="@font/nunito_regular"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/cobrar_descricao" />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:textAlignment="center"
      android:text="@string/nao_especificar"
      android:fontFamily="@font/nunito_semibold"
      android:textColor="@color/rosaClaro"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/renda_edt" />

  <android.widget.Button
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:background="@drawable/btn_rosa"
      android:text="@string/confirmar"
      android:fontFamily="@font/nunito_semibold"
      android:textColor="@color/white"
      android:layout_marginBottom="20dp"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>